# waveshare-board-lvgl-9

./: .gitignore  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/domains/: definitions.h
main/domains/display/: Display.cpp
main/domains/display/lcd/: LCD.cpp
main/domains/display/lvgl/: LVGL.cpp
main/domains/display/screens/: BaseScreen.cpp  BaseScreenElements.cpp  BootScreen.cpp  MainScreen.cpp  SomeOtherScreen.cpp  theme.h
main/domains/display/tft/: TFT.cpp
main/domains/io/i2c/: i2c.cpp
main/domains/state/: state.cpp
